--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "mysql2": "^3.6.0",
-    "next": "13.4.12",
+    "next": "^15.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "serverless-mysql": "^1.5.5"
+    "serverless-mysql": "^1.5.5",
+    "supports-color": "^10.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
