--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,22 @@
 version: '3.8'
 
 services:
-  mysqldb:
-    image: mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=nextdb
+  app:
+    build: .
+    container_name: deathboard-app
     ports:
-      - 3307:3306
-    # init sql script
-    volumes:
-      - ./database/db.sql:/docker-entrypoint-initdb.d/init.sql
-    command: mysqld --default-authentication-plugin=mysql_native_password
+      - "3001:3001"
+    restart: always
+    environment:
+      NODE_ENV: production
+      MYSQL_HOST: mysql-n8n
+      MYSQL_PORT: 3306
+      MYSQL_USER: root
+      MYSQL_PASSWORD: catarino
+      MYSQL_DATABASE: deathboard
+    networks:
+      - shared-net
 
+networks:
+  shared-net:
+    external: true
