--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
     "axios": "^1.4.0",
     "mysql2": "^3.14.1",
     "next": "^15.3.2",
